--- a/superego/assets/styles/scss/03_base/_base.scss
+++ b/superego/assets/styles/scss/03_base/_base.scss
@@ -26,7 +26,7 @@ body:not(.block-editor-writing-flow) {
   overflow-x: hidden;
   //margin-top: var(--se--header-height);
   accent-color: var(--wp--preset--color--primary-b);
-  scroll-padding-top: var(--se--header-height);
+  scroll-padding-top: 6rem;
 }
 
 // Wrapper styling
