--- a/superego/style.css
+++ b/superego/style.css
@@ -862,9 +862,9 @@ video {
   background-color: rgb(231 175 65 / var(--tw-bg-opacity)) !important;
 }
 
-.bg-primary-d-2 {
+.bg-vid-bg {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(48 48 48 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(65 63 65 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-accent-b {
@@ -890,10 +890,6 @@ video {
 .bg-primary-b {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(88 88 88 / var(--tw-bg-opacity)) !important;
-}
-
-.bg-transparent {
-  background-color: transparent !important;
 }
 
 .object-cover {
@@ -951,11 +947,6 @@ video {
   padding-bottom: 2rem !important;
 }
 
-.py-20 {
-  padding-top: 5rem !important;
-  padding-bottom: 5rem !important;
-}
-
 .pt-10 {
   padding-top: 2.5rem !important;
 }
@@ -974,102 +965,6 @@ video {
 
 .pb-4 {
   padding-bottom: 1rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-10 {
-  padding-top: 2.5rem !important;
-}
-
-.pb-8 {
-  padding-bottom: 2rem !important;
 }
 
 .text-center {
@@ -1109,10 +1004,6 @@ video {
 
 .text-h3-mobile {
   font-size: 40px !important;
-}
-
-.text-h4-mobile {
-  font-size: 30px !important;
 }
 
 .font-semibold {
@@ -1171,9 +1062,10 @@ video {
   color: currentColor !important;
 }
 
-.text-white {
-  --tw-text-opacity: 1 !important;
-  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+.ring {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
 }
 
 .filter {
@@ -1271,10 +1163,6 @@ video {
   .md\:text-h2-mobile {
     font-size: 50px !important;
   }
-
-  .md\:text-h4 {
-    font-size: 36px !important;
-  }
 }
 
 @media (min-width: 1024px) {
@@ -1288,16 +1176,6 @@ video {
 
   .lg\:col-span-8 {
     grid-column: span 8 / span 8 !important;
-  }
-
-  .lg\:mx-auto {
-    margin-left: auto !important;
-    margin-right: auto !important;
-  }
-
-  .lg\:mx-2 {
-    margin-left: 0.5rem !important;
-    margin-right: 0.5rem !important;
   }
 
   .lg\:mx-0 {
@@ -1329,28 +1207,20 @@ video {
     width: 100% !important;
   }
 
-  .lg\:w-screen {
-    width: 100vw !important;
-  }
-
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr)) !important;
   }
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
   }
 
-  .lg\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr)) !important;
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
   }
 
   .lg\:grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr)) !important;
-  }
-
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
   }
 
   .lg\:items-center {
@@ -1361,11 +1231,6 @@ video {
     justify-content: center !important;
   }
 
-  .lg\:gap-x-4 {
-    -moz-column-gap: 1rem !important;
-         column-gap: 1rem !important;
-  }
-
   .lg\:gap-x-8 {
     -moz-column-gap: 2rem !important;
          column-gap: 2rem !important;
@@ -1374,6 +1239,16 @@ video {
   .lg\:py-28 {
     padding-top: 7rem !important;
     padding-bottom: 7rem !important;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+
+  .lg\:px-6 {
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
   }
 
   .lg\:py-16 {
@@ -1396,136 +1271,6 @@ video {
     padding-right: 1rem !important;
   }
 
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-2 {
-    padding-left: 0.5rem !important;
-    padding-right: 0.5rem !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-2 {
-    padding-left: 0.5rem !important;
-    padding-right: 0.5rem !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-2 {
-    padding-left: 0.5rem !important;
-    padding-right: 0.5rem !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .lg\:px-12 {
-    padding-left: 3rem !important;
-    padding-right: 3rem !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .lg\:px-6 {
-    padding-left: 1.5rem !important;
-    padding-right: 1.5rem !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .lg\:px-6 {
-    padding-left: 1.5rem !important;
-    padding-right: 1.5rem !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .lg\:px-6 {
-    padding-left: 1.5rem !important;
-    padding-right: 1.5rem !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .lg\:px-6 {
-    padding-left: 1.5rem !important;
-    padding-right: 1.5rem !important;
-  }
-
-  .lg\:py-28 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px !important;
-    padding-right: 0px !important;
-  }
-
-  .lg\:px-6 {
-    padding-left: 1.5rem !important;
-    padding-right: 1.5rem !important;
-  }
-
   .lg\:pt-14 {
     padding-top: 3.5rem !important;
   }
@@ -1536,102 +1281,6 @@ video {
 
   .lg\:pb-20 {
     padding-bottom: 5rem !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
-  }
-
-  .lg\:pt-14 {
-    padding-top: 3.5rem !important;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px !important;
   }
 
   .lg\:text-h2 {
@@ -1650,14 +1299,6 @@ video {
 @media (min-width: 1280px) {
   .xl\:max-h-\[700px\] {
     max-height: 700px !important;
-  }
-
-  .xl\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr)) !important;
-  }
-
-  .xl\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr)) !important;
   }
 
   .xl\:py-24 {
@@ -1684,22 +1325,9 @@ video {
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr)) !important;
-  }
-
-  .\32xl\:gap-x-4 {
-    -moz-column-gap: 1rem !important;
-         column-gap: 1rem !important;
-  }
-
   .\32xl\:gap-x-2 {
     -moz-column-gap: 0.5rem !important;
          column-gap: 0.5rem !important;
-  }
-
-  .\32xl\:pb-0 {
-    padding-bottom: 0px !important;
   }
 
   .\32xl\:text-h1 {
